[tool.poetry]
name = "reference-data-db-orm"
version = "0.1.0"
description = ""
authors = ["Roland Coeurjoly <rolandcoeurjoly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.2"
pyparsing = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
